# Raspberry-Surveillance

./: .gitignore  CMakeLists.txt  README.md  controller.py  main.py  runnable.py
include/: logger.h
script/: register.py  send-mail.sh  send-pushed.sh
src/: main.cpp
